<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MAVBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="MavBuddy">MavBuddy</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="title_activity_user_home_page">UserHomePage</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_register_success">RegisterSuccess</string>
    <string name="register_success">Registration Successful!</string>
    <string name="click">Click</string>
    <string name="togoback">to go back to</string>
    <string name="loginpage">Login Page</string>
    <string name="welcome">Welcome Mavericks!</string>
    <string name="housing">Housing</string>
    <string name="rides">Friendly Rides</string>
    <string name="events">Events</string>
    <string name="verifypassword">Verify Password</string>
    <string name="emailid">Email Id</string>
    <string name="cancel">Cancel</string>
    <string name="here">here</string>
    <string name="title_activity_search_house">Search House</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="title_activity_add_house_post">Add House Post</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fillHouse">Add a new housing post</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="aptName">Apartment Name</string>
    <string name="typeOfAccom">Type of Accommodation</string>
    <string name="typeOfApt">Type of Apartment</string>
    <string name="noOfPerson">Number of Person</string>
    <string name="inDate">Move In Date</string>
    <string name="outDate">Move Out Date</string>
    <string name="roomFor">Room For</string>
    <string name="rent">Rent</string>
    <string name="mobile">Mobile Number</string>
    <string name="comments">Comments</string>

    <string-array name="typeOfApt">
        <item>1 BHK</item>
        <item>2 BHK</item>
    </string-array>
    <string-array name="typeOfAccom">
        <item>Permanent</item>
        <item>Temporary</item>
    </string-array>

    <string name="female">F</string>
    <string name="male">M</string>
    <string name="destination">Destination</string>
    <string name="fillRides">Fill your information</string>
    <string name="typeofpost">Type of Post</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="post">Post</string>
    <string name="request">Request</string>
    <string name="select">Select</string>
    <string name="submit">Submit</string>
    <string name="fillEvent">Fill your information</string>
    <string name="location">Location</string>
    <string name="cost">Cost</string>
    <string name="description">Description</string>
    <string name="title_activity_tab1">Tab1</string>
    <string name="title_section1">Housing</string>
    <string name="title_section2">Friendly Rides</string>
    <string name="title_section3">Events</string>
    <string name="title_activity_housing_tab">HousingTab</string>
    <string name="title_housing_section1">Application</string>
    <string name="title_housing_section2">My Post</string>
    <string name="myHousePost">My House Post</string>
    <string name="title_activity_rides_tab">RidesTab</string>
    <string name="title_activity_event_tab">EventTab</string>
    <string name="title_rides_section1">Application</string>
    <string name="title_rides_section2">My Post</string>
    <string name="title_event_section1">Application</string>
    <string name="title_event_section2">My Post</string>
    <string name="myRidesPost">My Rides Post</string>
    <string name="myEventPost">My Event Post</string>
    <string name="myPost">My Posts</string>
    <string name="title_activity_my_post">MyPostActivity</string>
    <string name="signOut">Log Out</string>
    <string name="title_activity_activity_view_housing_post">Activity_view_housing_post</string>
    <string name="title_activity_view_housing_post">View_housing_post</string>
    <string name="viewHousingPost">Housing Details</string>
    <string name="editPost">Edit</string>
    <string name="closePost">Close</string>
    <string name="reportSpam">Report Spam</string>
    <string name="title_activity_view_ride_post">View_ride_post</string>
    <string name="title_activity_view_event_post">View_event_post</string>
    <string name="invalid" />
    <string name="userExists" />
    <string name="date">Date</string>

    <string-array name="numOfPerson">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="rent">
        <item>&lt;$100</item>
        <item>&lt;$200</item>
        <item>&lt;$300</item>
        <item>&lt;$400</item>
        <item>&lt;$500</item>
        <item>&lt;$600</item>
        <item>&lt;$700</item>
        <item>&lt;$800</item>
    </string-array>
    <string-array name="roomFor">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="search_button">Search</string>
    <string name="cancel_button">Cancel</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="keywordRides">Provide destination to search..</string>

    <color name="grey">#25383C</color>

    <string name="keywordEvents">Provide event name or location to search..</string>
    <string name="keywordHousing">Provide apartment name or type to search..</string>
    <string name="empty" />
    <string name="viewRidesPost">Riding Details</string>
    <string name="viewEventPost">Event Details</string>
    <string name="title_activity_view_housing_my_post">ViewHousingMyPostActivity</string>
    <string name="title_activity_view_rides_my_post">ViewRidesMyPostActivity</string>
    <string name="title_activity_view_event_my_post">ViewEventMyPostActivity</string>
    <string name="title_activity_edit_housing_my_post">EditHousingMyPost</string>
    <string name="editYourPost">Edit your Post</string>
    <string name="save">Save</string>
    <string name="title_activity_edit_rides_my_post">EditRidesMyPost</string>
    <string name="title_activity_edit_events_my_post">EditEventsMyPost</string>
    <string name="editEvent"></string>
    <string name="forgotPassword">Forgot Your Password? Click Here...</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="enterUsername">Please enter your username below. A mail will be sent to the registered E-mail ID under that username.</string>
    <string name="send">Send</string>
    <string name="reset">Reset your password</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="changePwd">Change Your Password</string>
    <string name="oldPwd">Old Password</string>
    <string name="newPwd">New Password</string>
    <string name="confirmNewPwd">Confirm New Password</string>
    <string name="change">Change</string>
    <string name="chngPwd">Change Password</string>

</resources>
