<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uta.mavbuddy.login.ChangePassword"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/changePwd"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_centerHorizontal="true"        
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/newPwd" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/confirmNewPwd" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginRight="26dp"
        android:layout_marginTop="50dp"
        android:onClick="cancelChange"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginLeft="22dp"
        android:onClick="changePass"
        android:text="@string/change" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/oldPwd" >
        <requestFocus />
        </EditText>

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="" />

</RelativeLayout>
</LinearLayout>

</FrameLayout>