<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".AddRidesPost">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="29dp"
        android:text="@string/fillRides"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="28dp"
        android:text="@string/typeofpost"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="12dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="12dp"
        android:text="@string/destination"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="15dp"
        android:text="@string/endtime"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="12dp"
        android:text="@string/mobile"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="12dp"
        android:text="@string/emailid"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="12dp"
        android:text="@string/noOfPerson"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="12dp"
        android:text="@string/comments"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText
        android:id="@+id/name"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp"
        android:hint="Your name" />

    <EditText
        android:id="@+id/title"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:inputType="text"
        android:textSize="12sp"
        android:hint="Title of Post" />

    <EditText
        android:id="@+id/destination"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:hint="Destination"
        android:inputType="text"
        android:textSize="12sp" />

    <Button
        android:id="@+id/startTime"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:hint="hh:mm"
        android:onClick="showStartTimePickerDialog"
        android:textSize="12sp"
        android:gravity="left" />

    <Button
        android:id="@+id/endTime"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_below="@+id/startTime"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:textSize="12sp"
        android:hint="hh:mm"
        android:onClick="showEndTimePickerDialog"
        android:gravity="left" />

    <EditText
        android:id="@+id/mobileNo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_below="@+id/endTime"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_below="@+id/mobileNo"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/noOfPerson"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView11"
        android:layout_alignLeft="@+id/emailId"
        android:layout_below="@+id/emailId"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp"
        android:hint="Persons required" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/noOfPerson"
        android:layout_below="@+id/noOfPerson"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="12sp"
        android:hint="Additional Info" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/cancel"
        android:onClick="cancelRidesPost" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="34dp"
        android:layout_toRightOf="@+id/textView9"
        android:text="@string/submit"
        android:onClick="saveRidesPost" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/name"
        android:layout_alignTop="@+id/textView2"
        android:orientation="horizontal"
        android:checkedButton="@+id/radioButton1" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="15dp"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startTime"
        android:layout_alignRight="@+id/destination"
        android:layout_below="@+id/destination"
        android:layout_toRightOf="@+id/textView10"
        android:ems="10"
        android:hint="mm-dd-yyyy"
        android:textSize="12sp"
        android:onClick="showDateDialog"
        android:gravity="left" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:text="@string/starttime"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>

</LinearLayout>
</ScrollView>
