
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".ViewHousingMyPostActivity">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="20dp">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="39dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginRight="39dp"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/postId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/name"
        android:layout_alignLeft="@+id/welcome"
        android:layout_marginLeft="42dp"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/name"
        android:text="@string/title"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="@string/aptName"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/typeOfApt"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/typeOfAccom"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:text="@string/noOfPerson"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:text="@string/inDate"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:text="@string/outDate"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:text="@string/roomFor"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:text="@string/rent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:text="@string/mobile"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:text="@string/emailid"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:text="@string/comments"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignRight="@+id/name"
        android:layout_alignTop="@+id/textView2"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/aptName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignRight="@+id/title"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/typeOfApt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignRight="@+id/aptName"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/typeOfAccom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignRight="@+id/typeOfApt"
        android:layout_alignTop="@+id/textView5"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/noOfPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignRight="@+id/typeOfAccom"
        android:layout_alignTop="@+id/textView6"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/moveInDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_alignRight="@+id/noOfPerson"
        android:layout_alignTop="@+id/textView7"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/moveOutDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignRight="@+id/moveInDate"
        android:layout_alignTop="@+id/textView8"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/roomFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_alignRight="@+id/moveOutDate"
        android:layout_alignTop="@+id/textView9"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/rent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView11"
        android:layout_alignRight="@+id/roomFor"
        android:layout_alignTop="@+id/textView10"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/mobileNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView12"
        android:layout_alignRight="@+id/rent"
        android:layout_alignTop="@+id/textView11"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView13"
        android:layout_alignRight="@+id/mobileNo"
        android:layout_alignTop="@+id/textView12"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/emailId"
        android:layout_alignTop="@+id/textView13"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/empty"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_below="@+id/comments"
        android:text="@string/editPost"
        android:onClick="editPost"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/welcome"
        android:layout_below="@+id/comments"
        android:text="@string/cancel"
        android:onClick="cancelHousePost"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/textView9"
        android:text="@string/viewHousingPost"
        android:textSize="@dimen/large" />

</RelativeLayout>

</LinearLayout>
</ScrollView>